Transition commands from ACF to Cloud